arreglar video youtube

--- a/HTML LOURDES/index.html
+++ b/HTML LOURDES/index.html
@@ -167,13 +167,7 @@
 
   <!-- 🎥 Video promocional -->
   <div class="video-container">
-    <iframe width="560" height="315"
-      src="https://youtu.be/BSVpBFlg1jg?si=Dn6WcYBvSbLVxnIA"
-      title="Video promocional TravelNow"
-      frameborder="0"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-      allowfullscreen>
-    </iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/BSVpBFlg1jg?si=U58gTbPhGOj5qJky" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </div>
 
   <!-- 🖼️ Galería de imágenes -->
@@ -272,3 +266,4 @@
 
 </body>
 </html>
+
