navegacion entre paginas

--- a/HTML LOURDES/index.html
+++ b/HTML LOURDES/index.html
@@ -18,10 +18,10 @@
 
       <nav>
         <ul>
-          <li><a href="#inicio">Inicio</a></li>
-          <li><a href="#nosotros">Nosotros </a></li>
-          <li><a href="#contacto">Contacto</a></li>
-          <li><a href="#destinos">Destinos</a></li>
+          <li><a href="inicio">Inicio</a></li>
+          <li><a href="nosotros.html">Nosotros </a></li>
+          <li><a href="contacto">Contacto</a></li>
+          <li><a href="destinos">Destinos</a></li>
         </ul>
       </nav>
     </div>
@@ -41,55 +41,6 @@
       tenemos paquetes desde 500 Dolares en adelante 
     </p>
   </section>
-<section id="nosotros">
-  <h2>Sobre Nosotros</h2>
-  <p>En <strong>TravelNow</strong> somos un equipo apasionado por los viajes. Desde 2015 ayudamos a miles de personas a descubrir nuevos destinos, vivir experiencias únicas y volver felices. ✈️💙</p>
-
-  <!-- Información de los fundadores -->
-  <div class="equipo">
-    <div class="miembro">
-      <img src="cofundadora.jpg" alt="Dove Cameron - Cofundadora">
-      <h3>Dove Cameron</h3>
-      <p>Fundadora y Directora General</p>
-      <p class="bio">Mariana lidera TravelNow desde sus inicios, enfocándose en crear experiencias personalizadas que combinan confort, aventura y cultura.</p>
-    </div>
-
-    <div class="miembro">
-      <img src="cofundador.jpg" alt="German Garmendia Cofundador">
-      <h3>German Garmendia </h3>
-      <p>Co-fundador y Gerente de Operaciones</p>
-      <p class="bio">Carlos se encarga de coordinar los viajes y alianzas internacionales para ofrecer los mejores precios y servicios del mercado.</p>
-    </div>
-  </div>
-
-  <!-- Valores de la empresa -->
-  <div class="valores">
-    <h3>Nuestros valores</h3>
-    <ul>
-      <li>🌎 Pasión por los viajes y la cultura</li>
-      <li>🤝 Atención personalizada a cada cliente</li>
-      <li>💰 Transparencia y precios justos</li>
-      <li>⭐ Experiencias únicas e inolvidables</li>
-    </ul>
-  </div>
-
-  <!-- Reseñas de clientes -->
-  <div class="reseñas">
-    <h3>Lo que dicen nuestros viajeros</h3>
-    <div class="reseña">
-      <p>“El viaje a París fue increíble. Todo salió perfecto y el servicio fue excelente.”</p>
-      <span>- Lucía Fernández</span>
-    </div>
-    <div class="reseña">
-      <p>“Gracias a TravelNow cumplí el sueño de conocer Brasil. ¡Super recomendable!”</p>
-      <span>- Martín Pérez</span>
-    </div>
-    <div class="reseña">
-      <p>“Atención personalizada y muy profesionales. Volvería a viajar con ellos sin dudarlo.”</p>
-      <span>- Ana Torres</span>
-    </div>
-  </div>
-</section>
 
 <section id="contacto">
   <h2>Contacto</h2>
@@ -266,4 +217,5 @@
 
 </body>
 </html>
+
 
