--- a/HTML LOURDES/index.html
+++ b/HTML LOURDES/index.html
@@ -18,10 +18,10 @@
 
       <nav>
         <ul>
-          <li><a href="inicio">Inicio</a></li>
+          <li><a href="#inicio">Inicio</a></li>
           <li><a href="nosotros.html">Nosotros </a></li>
-          <li><a href="contacto">Contacto</a></li>
-          <li><a href="destinos">Destinos</a></li>
+          <li><a href="#contacto">Contacto</a></li>
+          <li><a href="#destinos">Destinos</a></li>
         </ul>
       </nav>
     </div>
@@ -217,5 +217,6 @@
 
 </body>
 </html>
+
 
 
