--- a/HTML LOURDES/nosotros.html
+++ b/HTML LOURDES/nosotros.html
@@ -20,8 +20,8 @@
         <ul>
           <li><a href="index.html">Inicio</a></li>
           <li><a href="nosotros.html">Nosotros </a></li>
-          <li><a href="contacto">Contacto</a></li>
-          <li><a href="destinos">Destinos</a></li>
+          <li><a href="#contacto">Contacto</a></li>
+          <li><a href="#destinos">Destinos</a></li>
         </ul>
       </nav>
     </div>
@@ -76,3 +76,4 @@
     </div>
   </div>
 </section>
+
