--- a/HTML LOURDES/index.html
+++ b/HTML LOURDES/index.html
@@ -29,7 +29,7 @@
   
 <section class="hero">
   <div class="hero-text">
-    <h1>Descubrí el mundo con TravelNow 🌍</h1>
+    <h1>Descubrí el mundo con TravelNow </h1>
     <p>Viajá a donde soñás. Fácil, rápido y sin complicaciones.</p>
     <a href="#destinos" class="boton-principal">Explorar destinos</a>
   </div>
@@ -44,7 +44,7 @@
 
 <section id="contacto">
   <h2>Contacto</h2>
-  <p>Dejanos tus datos y contanos cuál es tu destino favorito. 💬✈️</p>
+  <p>Dejanos tus datos y contanos cuál es tu destino favorito. </p>
 
   <form id="form-contacto" class="form-contacto">
     <label for="nombre">Nombre completo:</label>
@@ -111,17 +111,17 @@
 </section>
 <section id="multimedia">
   <h2>Multimedia</h2>
-  <p>Descubrí más sobre nuestros destinos y dejate llevar por la experiencia TravelNow 🎵✈️</p>
+  <p>Descubrí más sobre nuestros destinos y dejate llevar por la experiencia TravelNow </p>
 
-  <!-- 🎵 Música de ambiente -->
+  
   <audio id="musica-fondo" src="musica.mp3" autoplay loop></audio>
 
-  <!-- 🎥 Video promocional -->
+  
   <div class="video-container">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/BSVpBFlg1jg?si=U58gTbPhGOj5qJky" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </div>
 
-  <!-- 🖼️ Galería de imágenes -->
+  
   <div class="galeria">
     <img src="destino1.jpg" alt="Maldivas">
     <img src="destino2.jpg" alt="Londres">
@@ -194,8 +194,8 @@
       html += `
         <li class="item-contacto">
           <strong>${c.nombre}</strong> (${c.email})<br>
-          🌍 <em>${c.destino}</em><br>
-          🗒️ ${c.mensaje}<br>
+           <em>${c.destino}</em><br>
+           ${c.mensaje}<br>
           <small>${c.fecha}</small><br>
           <button onclick="borrarContacto(${i})">❌ Borrar</button>
         </li>
@@ -217,6 +217,7 @@
 
 </body>
 </html>
+
 
 
 
