--- a/HTML LOURDES/index.html
+++ b/HTML LOURDES/index.html
@@ -44,6 +44,7 @@
 
 <section id="contacto">
   <h2>Contacto</h2>
+  <p>Contactanos a traves de nuestro numero 3546 555555</p>
   <p>Dejanos tus datos y contanos cuál es tu destino favorito. </p>
 
   <form id="form-contacto" class="form-contacto">
@@ -217,6 +218,7 @@
 
 </body>
 </html>
+
 
 
 
